refactor : JwtAuthFilter 수정
수정 내용:
    - Arrays.asList -> List.of로 수정